--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
-    <string name="app_name">MNBirdSaver</string>
-    <string name="ip_address_view">IP Address View</string>
-    <string name="delte_view">Delte View</string>
-    <string name="gps_view">GPS View</string>
-    <string name="red_pixel_detection">Red Pixel Detection</string>
+    <string name="app_name">Birdsaver</string>
+    <string name="navigateToIpAddressView">Ip Address View</string>
+    <string name="navigateToDeleteView">Delete View</string>
+    <string name="navigateToGpsView">GPS View</string>
+    <string name="navigateToRedPixelDetectorView">Red Pixel Detector</string>
+    <string name="submit">Submit</string>
+    <string name="ip_address">IP Address</string>
+    <string name="home">Home</string>
+    <string name="back">Back</string>
 </resources>
