--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,13 @@
     <string name="deleteView">Lösche View</string>
     <string name="location_coordinates">Längengrad: %1$s\nBreitengrad: %2$s</string>
     <string name="navigateToCameraView">Camera View</string>
-    <string name="kameraView">Kamera View</string>
-    <string name="coordinates">GPS Koordinaten</string>
+    <string name="kameraView">Kamera View: </string>
+    <string name="coordinates">GPS Koordinaten: </string>
+    <string name="date">Datum: </string>
+    <string name="instructionHeadline">Anweisungen: </string>
     <string name="startCalibration">Starte Kalibrierung</string>
+    <string name="input">IP Adresse und Name eingeben</string>
+    <string name="name">Name</string>
+
+
 </resources>
