added new home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="name">Name</string>
     <string name="start">Start</string>
     <string name="_141_56_131_15">141.56.131.15</string>
+    <string name="continueCalibration">Weiter</string>
 </resources>
